tests/snapshots/test_enum__typed_ast__enum_empty.snap
---
source: tests/test-enum.rs
expression: ast
---
Specification(
    [
        TypeDcl(
            TypeDcl(
                [
                    ConstrTypeDcl(
                        EnumDcl(
                            EnumDcl {
                                ident: Identifier(
                                    "A",
                                ),
                                member: [],
                            },
                        ),
                    ),
                ],
            ),
        ),
    ],
)
